--- a/index.html
+++ b/index.html
@@ -38,33 +38,40 @@
             color: #ddd;
         }
 
+        }
+
+        .question-box:hover {
+            background-color: #f1e6f1;
+        }
+
         /* Forms and Other Styles */
         .form-container {
             display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 20px auto;
-            flex-direction: column;
-            max-width: 600px;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            justify-content: space-between;
+            align-items: flex-start;
+            margin: 20px;
+            gap: 20px;
+            flex-wrap: nowrap;
         }
 
         form {
-            width: 100%;
+            background-color: white;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 48%;
+            box-sizing: border-box;
         }
 
         form h2 {
             margin-top: 0;
-            color: purple;
-            font-size: 1.8em;
+            color: red; /* Red Title */
         }
 
         form label {
             display: block;
-            margin-bottom: 12px;
+            margin-bottom: 5px;
             font-weight: bold;
         }
 
@@ -74,34 +81,61 @@
         form input[type="date"] {
             width: 100%;
             margin-bottom: 15px;
-            padding: 12px;
-            font-size: 16px;
+            padding: 10px;
+            font-size: 14px;
             border: 1px solid #ccc;
-            border-radius: 5px;
+            border-radius: 4px;
             box-sizing: border-box;
         }
 
         form button {
-            background-color: purple;
+            background-color: #333;
             color: white;
             border: none;
             cursor: pointer;
-            font-size: 1.2em;
         }
 
         form button:hover {
             background-color: #555;
         }
 
-        .form-text {
-            background-color: purple;
-            color: white;
-            padding: 20px;
-            text-align: center;
-            font-size: 20px;
+        /* SIGNAL for the 6-Months Challenge Link */
+        #challenge-link {
             font-weight: bold;
-            border-radius: 10px;
+            color: #ffcc00;
+            font-size: 1.5em;
+            text-align: center;
+            padding: 10px;
+            background-color: #ffcc00;
+            color: white;
+            border-radius: 8px;
             margin-bottom: 20px;
+            cursor: pointer;
+        }
+
+        /* Centering Titles */
+        #services h2,
+        #student-needs h2 {
+            text-align: center;
+        }
+
+        /* Purple Bold Italic Text */
+        .form-text {
+            color: purple;
+            font-size: 1.3em;
+            font-weight: bold;
+            font-style: italic;
+            text-align: center;
+            margin-bottom: 20px;
+        }
+
+        /* Appealing Sentence in Red */
+        .centered-red {
+            color: red;
+            text-align: center;
+            font-size: 1.3em;
+            font-weight: bold;
+            margin: 20px 0;
         }
 
         /* Responsive Design */
@@ -113,18 +147,13 @@
             }
 
             .form-container {
-                padding: 15px;
+                flex-direction: column;
+                align-items: center;
+            }
+
+            form {
                 width: 90%;
-            }
-
-            form input,
-            form textarea {
-                font-size: 14px;
-            }
-
-            form button {
-                font-size: 1.5em;
-                padding: 15px;
+                margin-bottom: 20px;
             }
 
             #hero img {
@@ -156,30 +185,107 @@
 
     <!-- Updated Sentences -->
     <section>
-        <div class="centered-red">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
+        <div class="centered-red" style="color: red; font-size: 2em;">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
     </section>
 
-    <!-- Contact Form Section -->
-    <section class="form-container">
-        <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-            <h2>📚 Schedule Your Lessons</h2>
-            <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
+<style>
+    /* Centering the form container */
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        width: 50%;
+        background-color: #f9f9f9;
+        padding: 40px;
+        border-radius: 15px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    }
 
-            <label for="name">Full Name</label>
-            <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+    /* Adjusting the form size */
+    form {
+        width: 100%;
+    }
 
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="Your Email Address" required>
+    input, textarea {
+        width: 100%;
+        padding: 10px;
+        margin: 10px 0;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: 16px;
+    }
 
-            <label for="goals">Language Learning Goals</label>
-            <textarea id="goals" name="goals" placeholder="What do you want to focus on?" required></textarea>
+    button {
+        width: 100%;
+        padding: 15px;
+        font-size: 18px;
+    }
 
-            <label for="first-lesson-date">Choose your FREE First Lesson</label>
-            <input type="date" id="first-lesson-date" name="first-lesson-date" required>
+    /* Styling for form description box */
+    .form-text {
+        background-color: purple;
+        color: white;
+        padding: 20px;
+        text-align: center;
+        font-size: 20px;
+        font-weight: bold;
+        border-radius: 10px;
+        margin-bottom: 20px;
+    }
 
-            <button type="submit">Submit</button>
-        </form>
-    </section>
+ /* Styling for section alignment */
+    #questions {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        margin-top: 40px;
+        flex-wrap: wrap;
+    }
+
+    .question-box {
+        font-size: 18px;
+        background-color: #f0f0f0;
+        padding: 15px;
+        border-radius: 10px;
+        text-align: center;
+        flex: 1 1 200px;
+        max-width: 300px;
+        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    }
+}
+    #challenge-link {
+        text-align: center;
+        margin-top: 20px;
+        font-size: 18px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+</style>
+
+<!-- Contact Form Section -->
+<section class="form-container" style="max-width: 600px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+        <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
+        <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
+
+        <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+
+        <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
+        <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+
+        <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
+        <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
+
+        <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
+        <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+
+        <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
+    </form>
+</section>
 </body>
 
 </html>
