--- a/index.html
+++ b/index.html
@@ -38,8 +38,6 @@
             color: #ddd;
         }
 
-        }
-
         .question-box:hover {
             background-color: #f1e6f1;
         }
@@ -47,11 +45,11 @@
         /* Forms and Other Styles */
         .form-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: center;
             align-items: flex-start;
-            margin: 20px;
+            margin: 20px auto;
             gap: 20px;
-            flex-wrap: nowrap;
+            flex-wrap: wrap;
         }
 
         form {
@@ -60,7 +58,8 @@
             border: 1px solid #ccc;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            width: 48%;
+            width: 60%;
+            max-width: 800px;
             box-sizing: border-box;
         }
 
@@ -188,108 +187,30 @@
         <div class="centered-red" style="color: red; font-size: 2em;">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
     </section>
 
-<style>
-    /* Centering the form container */
-    .form-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        width: 50%;
-        background-color: #f9f9f9;
-        padding: 40px;
-        border-radius: 15px;
-        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    }
+    <!-- Contact Form Section -->
+    <section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+        <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+            <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
+            <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
 
-    /* Adjusting the form size */
-    form {
-        width: 100%;
-    }
+            <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
+            <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-    input, textarea {
-        width: 100%;
-        padding: 10px;
-        margin: 10px 0;
-        border: 1px solid #ccc;
-        border-radius: 5px;
-        font-size: 16px;
-    }
+            <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
+            <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-    button {
-        width: 100%;
-        padding: 15px;
-        font-size: 18px;
-    }
+            <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
+            <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
 
-    /* Styling for form description box */
-    .form-text {
-        background-color: purple;
-        color: white;
-        padding: 20px;
-        text-align: center;
-        font-size: 20px;
-        font-weight: bold;
-        border-radius: 10px;
-        margin-bottom: 20px;
-    }
+            <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
+            <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
- /* Styling for section alignment */
-    #questions {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 20px;
-        margin-top: 40px;
-        flex-wrap: wrap;
-    }
-
-    .question-box {
-        font-size: 18px;
-        background-color: #f0f0f0;
-        padding: 15px;
-        border-radius: 10px;
-        text-align: center;
-        flex: 1 1 200px;
-        max-width: 300px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    }
-}
-    #challenge-link {
-        text-align: center;
-        margin-top: 20px;
-        font-size: 18px;
-        font-weight: bold;
-        cursor: pointer;
-    }
-</style>
-
-<!-- Contact Form Section -->
-<section class="form-container" style="max-width: 600px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-    <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-        <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
-        <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
-
-        <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
-        <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
-
-        <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
-        <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
-
-        <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
-        <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
-
-        <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
-        <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
-
-        <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
-    </form>
-</section>
+            <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
+        </form>
+    </section>
 </body>
 
 </html>
-
 
 <!-- SIGNAL Link for the 6-Month Challenge -->
 <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
