--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -104,7 +104,7 @@
 <body>
     <!-- Navigation Menu -->
     <nav>
-       <li><a href="index.html">Home</a></li>
+        <a href="index.html">Home</a>
         <a href="teacher-info.html">Teacher Info</a>
         <a href="faq.html">FAQ</a>
         <a href="Tariffs.html">Tariffs</a>
