Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -137,6 +137,9 @@
     <button type="submit" style="display: block; width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Join Now</button>
 </form>
 
+    <a href="french%20is%20hard%20(1).mp4" download>Download or Play the Video: French is Hard</a>
+
+
     <!-- Challenge Overview Section -->
     <section class="challenge-section">
         <h2>What’s Inside the 6-Month French Challenge?</h2>
