Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -137,6 +137,14 @@
     <button type="submit" style="display: block; width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Join Now</button>
 </form>
 
+    <section id="hero">
+        <img src="French is hard.png
+" alt="Learn French" style="width: 60%; display: block; margin: 0 auto;"> 
+        <div style="text-align: center; margin-top: 30px;">
+           
+        </div>
+    </section>
+    
     <!-- Challenge Overview Section -->
     <section class="challenge-section">
         <h2>What’s Inside the 6-Month French Challenge?</h2>
