--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -131,11 +131,24 @@
     <label for="email" style="display: block; margin-bottom: 8px; font-weight: bold;">Email</label>
     <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px;">
 
+    <label for="country" style="display: block; margin-bottom: 8px; font-weight: bold;">Country</label>
+    <select id="country" name="country" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px;">
+        <option value="" disabled selected>Select Your Country</option>
+        <option value="Algeria">Algeria</option>
+        <option value="Austria">Austria</option>
+        <option value="France">France</option>
+        <option value="Germany">Germany</option>
+        <option value="United States">United States</option>
+        <option value="United Kingdom">United Kingdom</option>
+        <option value="Other">Other</option>
+    </select>
+
     <label for="availability" style="display: block; margin-bottom: 8px; font-weight: bold;">Preferred Lesson Times</label>
     <textarea id="availability" name="availability" placeholder="Your availability" style="width: 100%; padding: 10px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
 
     <button type="submit" style="display: block; width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Join Now</button>
 </form>
+
 
     <section id="hero">
         <img src="French is hard.png
