Update 6 MONTHS CHALLENGE DETAILS.html

--- a/6 MONTHS CHALLENGE DETAILS.html
+++ b/6 MONTHS CHALLENGE DETAILS.html
@@ -134,13 +134,21 @@
     <label for="country" style="display: block; margin-bottom: 8px; font-weight: bold;">Country</label>
     <select id="country" name="country" required style="width: 100%; padding: 10px; margin-bottom: 15px; border: 1px solid #ccc; border-radius: 5px;">
         <option value="" disabled selected>Select Your Country</option>
-        <option value="Algeria">Algeria</option>
         <option value="Austria">Austria</option>
+        <option value="Belgium">Belgium</option>
         <option value="France">France</option>
         <option value="Germany">Germany</option>
-        <option value="United States">United States</option>
+        <option value="Italy">Italy</option>
+        <option value="Netherlands">Netherlands</option>
+        <option value="Norway">Norway</option>
+        <option value="Spain">Spain</option>
+        <option value="Sweden">Sweden</option>
+        <option value="Switzerland">Switzerland</option>
         <option value="United Kingdom">United Kingdom</option>
-        <option value="Other">Other</option>
+        <option value="United States">United States</option>
+        <option value="Saudi Arabia">Saudi Arabia (KSA)</option>
+        <option value="United Arab Emirates">United Arab Emirates (UAE)</option>
+        <option value="Dubai">Dubai</option>
     </select>
 
     <label for="availability" style="display: block; margin-bottom: 8px; font-weight: bold;">Preferred Lesson Times</label>
@@ -148,6 +156,7 @@
 
     <button type="submit" style="display: block; width: 100%; padding: 10px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Join Now</button>
 </form>
+
 
 
     <section id="hero">
