--- a/index.html
+++ b/index.html
@@ -187,30 +187,47 @@
         <div class="centered-red" style="color: red; font-size: 2em;">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
     </section>
 
-    <!-- Contact Form Section -->
-    <section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
-        <form action="https://formspree.io/f/xjkkbrlj" method="POST">
-            <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
-            <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
+   <!-- Contact Form Section -->
+<section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
+    <form action="https://formspree.io/f/xjkkbrlj" method="POST">
+        <h2 style="text-align: center; color: purple; font-size: 1.8em;">📚 Schedule Your Lessons</h2>
+        <p style="text-align: center; font-size: 1.2em; color: #333;">FILL THIS FORM TO SCHEDULE LESSONS AT YOUR PACE</p>
 
-            <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
-            <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+        <label for="name" style="display: block; margin-bottom: 12px; font-weight: bold;">Full Name</label>
+        <input type="text" id="name" name="name" placeholder="Your Full Name" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-            <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
-            <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+        <label for="email" style="display: block; margin-bottom: 12px; font-weight: bold;">Email</label>
+        <input type="email" id="email" name="email" placeholder="Your Email Address" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-            <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
-            <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
+        <label for="country" style="display: block; margin-bottom: 12px; font-weight: bold;">Country</label>
+        <select id="country" name="country" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+            <option value="" disabled selected>Select Your Country</option>
+            <option value="Austria">Austria</option>
+            <option value="Belgium">Belgium</option>
+            <option value="France">France</option>
+            <option value="Germany">Germany</option>
+            <option value="Italy">Italy</option>
+            <option value="Netherlands">Netherlands</option>
+            <option value="Norway">Norway</option>
+            <option value="Spain">Spain</option>
+            <option value="Sweden">Sweden</option>
+            <option value="Switzerland">Switzerland</option>
+            <option value="United Kingdom">United Kingdom</option>
+            <option value="United States">United States</option>
+            <option value="Saudi Arabia">Saudi Arabia (KSA)</option>
+            <option value="United Arab Emirates">United Arab Emirates (UAE)</option>
+            <option value="Dubai">Dubai</option>
+        </select>
 
-            <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
-            <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
+        <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
+        <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;"></textarea>
 
-            <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
-        </form>
-    </section>
-</body>
+        <label for="first-lesson-date" style="display: block; margin-bottom: 12px; font-weight: bold;">Choose your FREE First Lesson</label>
+        <input type="date" id="first-lesson-date" name="first-lesson-date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-</html>
+        <button type="submit" style="display: block; width: 100%; padding: 14px; background-color: purple; color: white; border: none; border-radius: 5px; font-size: 1.2em; cursor: pointer;">Submit</button>
+    </form>
+</section>
 
 <!-- SIGNAL Link for the 6-Month Challenge -->
 <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
