--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>French Lessons with Meriem</title>
     <style>
+        /* Styling for the logo */
+        .logo {
+            display: block;
+            width: 100px; /* Adjust size */
+            height: auto;
+            margin-top: 10px; /* Space from the top */
+            margin-left: 10px; /* Space from the left */
+        }
+    </style>
+</head>
+<body>
+    <!-- Logo without a link -->
+    <img src="LOGO.png" alt="Logo" class="logo">
+
         /* General Styles */
         body {
             font-family: Arial, sans-serif;
