--- a/index.html
+++ b/index.html
@@ -192,8 +192,13 @@
 
     <!-- Updated Sentences -->
     <section>
-        <div class="centered-red" style="color: red; font-size: 2em;">LEARN FRENCH WITH AFFORDABLE PRICES: 1.5 HOURS FOR JUST 19 EUROS PER SESSION</div>
-    </section>
+    <div class="centered-red" style="color: red; font-size: 2em; font-weight: bold; text-align: center;">
+        BUSINESS FRENCH / FRENCH FOR EXAMS / ADVANCED FRENCH
+    </div>
+    <div class="centered-blue" style="color: blue; font-size: 2em; font-weight: bold; text-align: center;">
+        90 = 19 EUROS
+    </div>
+</section>
 
     <!-- Contact Form Section -->
     <section class="form-container" style="max-width: 800px; margin: 20px auto; padding: 20px; background-color: white; border-radius: 8px; box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);">
