--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>French Lessons with Meriem</title>
+    <title>Personalized French Lessons Tailored Just for You</title>
     <style>
         /* General Styles */
         body {
