--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     </nav>
 
     <header>
-        <h1>French Lessons with Meriem</h1>
+        <h1>Personalized French Lessons Tailored Just for You</h1>
     </header>
 
     <!-- Updated Sentences -->
