--- a/teacher-info.html
+++ b/teacher-info.html
@@ -15,21 +15,22 @@
 
         nav ul {
             list-style-type: none;
-            padding: 0;
+            padding: 10px 0;
             margin: 0;
             text-align: center;
             background-color: #4b0082; /* Purple */
+            font-size: 1.2em; /* Larger navigation text */
         }
 
         nav ul li {
             display: inline;
-            margin-right: 15px;
+            margin-right: 20px;
         }
 
         nav ul li a {
             text-decoration: none;
             color: white;
-            padding: 10px;
+            padding: 15px 20px;
         }
 
         nav ul li a:hover {
@@ -41,14 +42,16 @@
             background-color: #ffd700; /* Golden yellow */
             color: #4b0082;
             text-align: center;
-            padding: 20px;
+            padding: 30px 20px;
+            font-size: 2em; /* Larger header text */
         }
 
         #intro {
-            background-color: #5A1A8A; /* Dark Purple */
+            background-color: #d3b2e5; /* Lighter purple */
             color: white;
             padding: 40px;
             text-align: center;
+            font-size: 1.2em; /* Larger introduction text */
         }
 
         #teacher-description {
@@ -59,20 +62,10 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
-        .question {
+        .teacher-details {
+            margin-top: 20px;
+            font-size: 1.3em;
             font-weight: bold;
-            color: red; /* Red for questions */
-            background-color: #4b0082; /* Purple background for questions */
-            padding: 10px;
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-
-        .answer {
-            background-color: #fff8dc; /* Light yellow for answers */
-            padding: 10px;
-            font-size: 1.2em;
-            margin-bottom: 20px;
         }
 
         footer {
@@ -130,29 +123,33 @@
         <h1>Meet Your Teacher: Meriem</h1>
     </header>
 
-    <!-- Image Section (Image linked from the repository) -->
+    <!-- Image Section -->
     <img id="teacher-image" src="IMG_2556.jpg" alt="Teacher Image">
 
     <!-- Introduction Section -->
-<section id="intro">
-    <h2>About Me</h2>
-    <p><strong>Une description n'est qu'un maquillage.</strong><br>
-    Let’s meet so you can form your own opinion of me. <br><br>
+    <section id="intro">
+        <h2>About Me</h2>
+        <p><strong>Une description n'est qu'un maquillage.</strong><br>
+        Let’s meet so you can form your own opinion of me. <br><br>
 
-    However, as it's customary, here’s a bit about me: <br><br>
+        However, as it's customary, here’s a bit about me: <br><br>
 
-    I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
+        I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
 
-    - I am passionate about writing, particularly fiction. <br>
-    - In my free time, I enjoy playing basketball and traveling. <br><br>
+        - I am passionate about writing, particularly fiction. <br>
+        - In my free time, I enjoy playing basketball and traveling. <br><br>
 
-    While I may not know exactly why you chose French, I do believe, as Duffy sings in <em>Mercy</em>,<br>
-    “I don’t know what you do, but you do it well.” <br><br>
+        While I may not know exactly why you chose French, I do believe, as Duffy sings in <em>Mercy</em>,<br>
+        “I don’t know what you do, but you do it well.” <br><br>
 
-    I also have a love for books—whether reading them or simply collecting them. <br><br>
+        I also have a love for books—whether reading them or simply collecting them. <br><br>
 
-    Good luck!</p>
-</section>
+        <div class="teacher-details">
+            French Educated | 11 Years Teaching Experience | Professionals & Students<br>
+            Flexible, Patient, and FUN!
+        </div>
+        Good luck!</p>
+    </section>
 
     <!-- Footer -->
     <footer>
