--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personalized French Lessons Tailored Just for You</title>
+    <title>Online Personalized French Lessons Tailored Just for You</title>
     <style>
         /* General Styles */
         body {
@@ -187,7 +187,7 @@
     </nav>
 
     <header>
-        <h1>Personalized French Lessons Tailored Just for You</h1>
+        <h1>Online Personalized French Lessons Tailored Just for You</h1>
     </header>
 
     <!-- Updated Sentences -->
