--- a/teacher-info.html
+++ b/teacher-info.html
@@ -118,14 +118,30 @@
         </ul>
     </nav>
 
-    <!-- Main Header -->
-    <header>
-        <h1>Meet Your Teacher: Meriem </h1>
-    </header>
-    <div class="teacher-details">
-            French Educated | 11 Years Teaching Experience | Professionals & Students<br>
-            Flexible, Patient, and FUN!
-        </div>
+    header {
+    background-color: #ffd700; /* Unified golden yellow background */
+    color: #4b0082; /* Purple text color for contrast */
+    text-align: center;
+    padding: 20px 15px;
+    border-bottom: 3px solid #4b0082; /* Subtle border for definition */
+}
+
+header h1 {
+    margin: 0;
+    font-size: 2.5em; /* Prominent size for the main title */
+    font-weight: bold; /* Bold for emphasis */
+    text-transform: uppercase; /* All caps for stronger impact */
+}
+
+header .teacher-details {
+    margin-top: 10px; /* Space below the title */
+    font-size: 1.2em; /* Distinct but smaller size for details */
+    font-weight: 500; /* Medium weight for readability */
+    letter-spacing: 0.5px; /* Slight letter spacing for elegance */
+    line-height: 1.5; /* Improve readability with consistent spacing */
+    color: #4b0082; /* Same purple as the title for uniformity */
+}
+
 
     <!-- Image Section -->
     <img id="teacher-image" src="IMG_2556.jpg" alt="Teacher Image">
