--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         BUSINESS FRENCH / FRENCH FOR EXAMS / ADVANCED FRENCH
     </div>
     <div class="centered-blue" style="color: blue; font-size: 2em; font-weight: bold; text-align: center;">
-        90 = 19 EUROS
+        90min = 19 EUROS
     </div>
 </section>
 
