--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 
 <body>
     <!-- Logo without a link -->
-    <img src="LOGO.png" alt="Logo" class="logo">
+    <img src="LOGOO.png" alt="Logo" class="logo">
 
     <!-- Navigation Menu -->
     <nav>
