--- a/teacher-info.html
+++ b/teacher-info.html
@@ -149,9 +149,8 @@
         <p><strong>Une description n'est qu'un maquillage.</strong><br>
         Let’s meet so you can form your own opinion of me. <br><br>
 
-        However, as it's customary, here’s a bit about me: <br><br>
 
-        I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
+        I am 32 years old, fluent in French, Arabic, English, German, and conversational Spanish. of algerian origin but i live in austria.I graduated in English Literature and Anglo-Saxon Studies and have been teaching French since <strong>2015</strong>. Over the years, I have had the privilege of working with professionals, diplomats, and students, tailoring lessons to help them achieve their language goals, whether for exams, career advancement, or personal enrichment. <br><br>
 
         - I am passionate about writing, particularly fiction. <br>
         - In my free time, I enjoy playing basketball and traveling. <br><br>
