--- a/index.html
+++ b/index.html
@@ -352,9 +352,21 @@
     </div>
     <div class="testimonial">
         <blockquote>
-            "As a diplomat from Spain, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
+            "As a diplomacy student from Italy, I needed to pass my French exams quickly. Meriem’s approach was exactly what I needed to achieve my goals!"
         </blockquote>
-        <p>- Javier, Spain</p>
+        <p>- O.C, Italy </p>
+    </div>
+     <div class="testimonial">
+        <blockquote>
+            "I've always struggled with French, especially when it came to professional conversations for work. After just a few lessons, I noticed a huge improvement!"
+        </blockquote>
+        <p>- Stef, Italy</p>
+    </div>
+     <div class="testimonial">
+        <blockquote>
+            "Simple and effective!"
+        </blockquote>
+        <p>- Lina, Jordan- Architect</p>
     </div>
 </section>
 
