--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
             <label for="goals" style="display: block; margin-bottom: 12px; font-weight: bold;">Language Learning Goals</label>
             <textarea id="goals" name="goals" placeholder="What do you want to focus on?" style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;" rows="5"></textarea>
 
-            <label for="date" style="display: block; margin-bottom: 12px; font-weight: bold;">Preferred Lesson Date</label>
+            <label for="date" style="display: block; margin-bottom: 12px; font-weight: bold;">Book your first lesson free of charge</label>
             <input type="date" id="date" name="date" required style="width: 100%; padding: 12px; margin-bottom: 20px; border: 1px solid #ccc; border-radius: 5px; font-size: 1em;">
 
-            <button type="submit" style="background-color: #333; color: white; padding: 15px; font-size: 1.2em; width: 100%; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
+            <button type="Book now " style="background-color: #333; color: white; padding: 15px; font-size: 1.2em; width: 100%; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
         </form>
     </section>
 <!-- SIGNAL Link for the 6-Month Challenge -->
