--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -60,7 +60,6 @@
     
     <h2>6. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p>Email: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
-    <p>Phone: +123 456 7890</p>
+    <p>Email: <a href="mailto: frenchforeveryone74@gmail.com">your-email@example.com</a></p>
 </body>
 </html>
