--- a/index.html
+++ b/index.html
@@ -381,7 +381,9 @@
 </section>
 
 <footer style="background-color: #333; color: #fff; text-align: center; padding: 10px; margin-top: 20px; font-size: 14px;">
-    © 2024 All Rights Reserved.
+    © 2024 All Rights Reserved.       
+    <a href="privacy-policy.html">Privacy terms</a>
+
 </footer>
 
 
