--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -56,10 +56,9 @@
         <li>Access, correct, or delete your personal information.</li>
         <li>Opt out of receiving promotional communications.</li>
     </ul>
-    <p>To exercise these rights, please contact us at <a href="mailto:your-email@example.com">your-email@example.com</a>.</p>
     
     <h2>6. Contact Us</h2>
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
-    <p>Email: <a href="mailto: frenchforeveryone74@gmail.com">your-email@example.com</a></p>
+    <p>Email: <a href="mailto: frenchforeveryone74@gmail.com">frenchforeveryone74@gmail.com</a></p>
 </body>
 </html>
