--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -61,4 +61,8 @@
     <p>If you have any questions about this Privacy Policy, please contact us at:</p>
     <p>Email: <a href="mailto: frenchforeveryone74@gmail.com">frenchforeveryone74@gmail.com</a></p>
 </body>
+
+<div class="button-container">
+            <a href="index.html">Back to Home Page</a>
+        </div>
 </html>
