--- a/index.html
+++ b/index.html
@@ -195,10 +195,36 @@
         <a href="#services">Services</a>
         <a href="#testimonials">Testimonials</a>
     </nav>
+    
+<!-- Hero Section -->
+    <section id="hero">
+        <h1>Master Business French – Boost Your Career with Confidence!</h1>
+        <h2>Affordable, flexible lessons tailored to professionals</h2>
+        <!-- Image Placeholder for Hero Section -->
+        <div style="text-align:center;">
+            <img src="hero-image.jpg" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
+        </div>
+        <div style="text-align:center;">
+            <a href="#book-now" style="font-size: 1.5em; padding: 10px 20px; background-color: #333; color: white; text-decoration: none; border-radius: 5px;">Book Your First Free Session</a>
+        </div>
+    </section>
 
-    <header>
-        <h1>Online Personalized French Lessons Tailored Just for You</h1>
-    </header>
+    <!-- Key Benefits Section -->
+    <section id="key-benefits">
+        <h2>Why Choose Us?</h2>
+        <ul style="list-style-type: none; padding: 0; text-align:center;">
+            <li><strong>Personalized Lessons</strong>: Tailored to your business needs.</li>
+            <li><strong>Flexible Scheduling</strong>: Learn at your own pace, anytime.</li>
+            <li><strong>Confidence Boost</strong>: Speak fluently with clients and colleagues.</li>
+            <li><strong>Affordable Rates</strong>: 90-min sessions for just €19!</li>
+            <li><strong>First Lesson Free</strong>: Get started with no commitment!</li>
+        </ul>
+    </section>
+
+    <!-- Image Placeholder for Benefits Section -->
+    <div style="text-align:center;">
+        <img src="benefits-image.jpg" alt="Learning French Online" style="width:100%; max-width:600px; margin-top: 20px;">
+    </div>
 
     <!-- Updated Sentences -->
     <section>
