--- a/index.html
+++ b/index.html
@@ -195,36 +195,16 @@
         <a href="#services">Services</a>
         <a href="#testimonials">Testimonials</a>
     </nav>
-    
+       <!-- Image Placeholder for Benefits Section -->
+    <div style="text-align:center;">
+        <img src="MA3" alt="Learning French Online" style="width:100%; max-width:600px; margin-top: 20px;">
+    </div>
 <!-- Hero Section -->
     <section id="hero">
         <h1>Master Business French – Boost Your Career with Confidence!</h1>
         <h2>Affordable, flexible lessons tailored to professionals</h2>
-        <!-- Image Placeholder for Hero Section -->
-        <div style="text-align:center;">
-            <img src="hero-image.jpg" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
-        </div>
-        <div style="text-align:center;">
-            <a href="#book-now" style="font-size: 1.5em; padding: 10px 20px; background-color: #333; color: white; text-decoration: none; border-radius: 5px;">Book Your First Free Session</a>
-        </div>
+       
     </section>
-
-    <!-- Key Benefits Section -->
-    <section id="key-benefits">
-        <h2>Why Choose Us?</h2>
-        <ul style="list-style-type: none; padding: 0; text-align:center;">
-            <li><strong>Personalized Lessons</strong>: Tailored to your business needs.</li>
-            <li><strong>Flexible Scheduling</strong>: Learn at your own pace, anytime.</li>
-            <li><strong>Confidence Boost</strong>: Speak fluently with clients and colleagues.</li>
-            <li><strong>Affordable Rates</strong>: 90-min sessions for just €19!</li>
-            <li><strong>First Lesson Free</strong>: Get started with no commitment!</li>
-        </ul>
-    </section>
-
-    <!-- Image Placeholder for Benefits Section -->
-    <div style="text-align:center;">
-        <img src="benefits-image.jpg" alt="Learning French Online" style="width:100%; max-width:600px; margin-top: 20px;">
-    </div>
 
     <!-- Updated Sentences -->
     <section>
@@ -276,6 +256,21 @@
 
             <button type="Book now" style="background-color: #333; color: white; padding: 15px; font-size: 1.2em; width: 100%; border: none; border-radius: 5px; cursor: pointer;">Submit</button>
         </form>
+    </section>
+     <!-- Image Placeholder for Hero Section -->
+        <div style="text-align:center;">
+            <img src="ME2" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
+        </div>
+    <!-- Key Benefits Section -->
+    <section id="key-benefits">
+        <h2>Why Choose Us?</h2>
+        <ul style="list-style-type: none; padding: 0; text-align:center;">
+            <li><strong>Personalized Lessons</strong>: Tailored to your business needs.</li>
+            <li><strong>Flexible Scheduling</strong>: Learn at your own pace, anytime.</li>
+            <li><strong>Confidence Boost</strong>: Speak fluently with clients and colleagues.</li>
+            <li><strong>Affordable Rates</strong>: 90-min sessions for just €19!</li>
+            <li><strong>First Lesson Free</strong>: Get started with no commitment!</li>
+        </ul>
     </section>
 <!-- SIGNAL Link for the 6-Month Challenge -->
 <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
