--- a/index.html
+++ b/index.html
@@ -195,10 +195,11 @@
         <a href="#services">Services</a>
         <a href="#testimonials">Testimonials</a>
     </nav>
-       <!-- Image Placeholder for Benefits Section -->
-    <div style="text-align:center;">
-        <img src="MA3" alt="Learning French Online" style="width:100%; max-width:600px; margin-top: 20px;">
-    </div>
+    
+         <!-- Image Placeholder for Hero Section -->
+        <div style="text-align:center;">
+            <img src="ME3" alt="French Business Meeting" style="width:100%; max-width:600px; margin-bottom: 20px;">
+        </div>
 <!-- Hero Section -->
     <section id="hero">
         <h1>Master Business French – Boost Your Career with Confidence!</h1>
@@ -274,16 +275,9 @@
     </section>
 <!-- SIGNAL Link for the 6-Month Challenge -->
 <div id="challenge-link" onclick="window.location.href='6%20MONTHS%20CHALLENGE%20DETAILS.html'">
-    🚨 Click Here to Learn About the 6-Month Challenge 🚨
+    🚨 Click Here to Learn About the 6-Month Challenge Beginner's Edition 🚨
 </div>
 
-
-    <section id="hero">
-        <img src="IMG_2556.jpg" alt="Learn French" style="width: 90%; display: block; margin: 0 auto;">
-        <div style="text-align: center; margin-top: 30px;">
-            <p style="font-size: 1.5em; font-weight: bold; color: black;">With years of experience teaching French, I tailor lessons to meet your specific needs, whether you're learning for travel, business, exams, or simply to enjoy the language.</p>
-        </div>
-    </section>
 
     <style>
     /* Section Styles */
