--- a/index.html
+++ b/index.html
@@ -1,6 +1,3 @@
-<!DOCTYPE html>
-<html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,6 +11,8 @@
         'https://www.googletagmanager.com/gtm.js?id=GTM-K5TFPFWX';f.parentNode.insertBefore(j,f);
         })(window,document,'script','dataLayer','GTM-K5TFPFWX');
     </script>
+    <!-- End Google Tag Manager -->
+</head>
 
         /* General Styles */
         body {
